<resources>


    <string name="app_name">Flap</string>
    <string name="home">Home</string>
    <string name="emergency">Emergency</string>
    <string name="order_tracking">Order Tracking</string>
    <string name="my_account">My Account</string>
    <string name="my_orders">My Orders</string>
    <string name="notification">Notification</string>
    <string name="wish_list">Wish List</string>
    <string name="merchants">Merchants</string>
    <string name="delivery_partner">Delivery Partner</string>
    <string name="customer_services">Customer Services</string>
    <string name="legal_and_about_us">Legal and AboutUs</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="ambulance">AMBULANCE</string>
    <string name="medicine">Medicine &amp; Essentials</string>
    <string name="doctors">Doctors</string>
    <string name="eyes">Eyes</string>
    <string name="ear_nose_throat">Ear,Nose,Throat</string>
    <string name="dermatologist">Dermatologist</string>
    <string name="neurologist">Neurologist</string>
    <string name="cardiologist">Cardiologist</string>
    <string name="homeopathy">Homeopathy</string>
    <string name="sexologist">Sexologist</string>
    <string name="dentist">Dentist</string>
    <string name="pediatrics">Pediatrics</string>
    <string name="ayurveda">Ayurveda</string>
    <string name="orthopedic">Orthopedic</string>
    <string name="physiotherapy">Physiotherapy</string>
    <string name="veterinary">Veterinary</string>
    <string name="cancer">Cancer</string>
    <string name="gynecologist">Gynecologist</string>
    <string name="general_physician">General Physician</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="new_user">New user ? Register Here!</string>
    <string name="name">Enter Your Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_member">Already a Member? Sign In Here !!</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="enter_your_email">Enter Your Email!</string>
    <string name="or">OR</string>
    <string name="resend_otp">Resend OTP -</string>
    <string name="enter_your_phone_number">Enter Your Phone Number!</string>
    <string name="_03_30">03:30</string>
    <string name="continues">Continue</string>
    <string name="todo">TODO</string>
    <string name="are_you_in_emergency">Are You In Emergency?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="eye_doctors_list">Eye Doctors List</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="distance">Distance:</string>
    <string name="_550">550</string>
    <string name="km">KM</string>
    <string name="cost_total">Cost Total</string>
    <string name="inr">INR</string>
    <string name="book_ambulance">Book Ambulance</string>
    <string name="upload_prescription">Upload Prescription</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="name_medicine">Name:</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="price">Price :</string>
    <string name="_100">100</string>

    <string name="add_to_cart">Add To Cart</string>
    <string name="help">If You are unable to find any Services,Then Please Leave your Details Here,We will Contact you soon.</string>
    <string name="help_me">Help Me :)</string>
    <string name="welcome">Welcome to Flap family, we wish you good health and we are here to help you.</string>
    <string name="order_now">Order Now</string>
    <string name="fee">Fee :</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="cart">Cart</string>
    <!--    <string name="notification">Notification</string>-->
    <string name="search">Search</string>
    <string name="browse_all_help_topic">Browse All Help Topic</string>
    <string name="contact_us">Contact Us</string>
    <string name="we_will_call_you_on_this_number">We will call you on this number.</string>
    <string name="request_a_call">Request A Call</string>
    <string name="disconnected">If Your Call gets disconnected , we may use this number to call you back again.</string>
    <string name="filter">Filter</string>
    <string name="no_new_notification">No New Notification</string>
    <string name="notifications">No Notifications</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="verify_and_sign_in">Verify and SignIn</string>
    <string name="please_enter_otp">Please Enter OTP</string>
    <string name="save_and_exit">Save And Exit</string>
    <string name="add_details">Add Details</string>
    <string name="product_listing">Product Listing</string>
    <string name="bank_details">Bank Details</string>
<!--    <string name="add_details">Add Details</string>-->
<!--    <string name="add_details">Add Details</string>-->
<!--    <string name="add_details">Add Details</string>-->
    <string name="documentation">Documentation</string>
    <string name="business_details">Business Details</string>
    <string name="doctors_clinic_name">Doctors/Clinic Name</string>
    <string name="experience_in_years">Experience(In Years)</string>
    <string name="consultation_fee">Consultation Fee</string>
    <string name="area_pin">Area Pin</string>
    <string name="address_line_1_complete_address">Address Line 1 (Complete Address)</string>
    <string name="address_line_2_locality_street">Address Line 2 (Locality, Street)</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="timing">Timing</string>
    <string name="daily_available_seats">Daily Available Seats</string>
    <string name="submit_details">Submit Details</string>
    <string name="_2500">2500</string>
    <string name="firm_name">Firm Name</string>
    <string name="address_proof_upload">Address Proof (Upload)</string>
    <string name="gstin_number_upload">GSTIN Number (Upload)</string>
    <string name="medical_certificate_upload">Medical Certificate (Upload)</string>
    <string name="clinic_s_license_upload">Clinic\'s License (Upload)</string>
    <string name="doctor_s_photo_upload">Doctor\'s Photo (Upload)</string>
    <string name="doctor_s_signature_upload">Doctor\'s Signature (Upload)</string>
    <string name="clinic_doctor_s_photo_upload">Clinic/Doctor\'s Photo (Upload)</string>
    <string name="submit_document">Submit Document</string>
    <string name="address">Address</string>
    <string name="photo">Photo</string>
    <string name="submit_document">Submit Document</string>
    <!--    <string name="upload_prescription">Upload Prescription</string>-->
    <!--    <string name="ayurveda">Ayurveda</string>-->
    <!--    <string name="cardiologist">Cardiologist</string>-->
    <!--    <string name="dentist">Dentist</string>-->

</resources>