<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Ambulance.AmbulanceActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:textColorHint="@color/black"
                    android:layout_marginBottom="5dp"
                    app:boxStrokeColor="@android:color/darker_gray"
                    app:boxStrokeErrorColor="@color/red"
                    app:hintTextColor="@color/teal_700">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/from"
                        android:inputType="text"
                        android:textColorHint="@color/black"
                        android:padding="16dp"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/swapTextImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/circle_green"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_arrow_up_down"
                    android:contentDescription="@string/todo" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:textColorHint="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="32dp"
                    app:boxStrokeColor="@android:color/darker_gray"
                    app:boxStrokeErrorColor="@color/red"
                    app:hintTextColor="@color/teal_700">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/to"
                        android:textColorHint="@color/black"
                        android:inputType="text"
                        android:padding="16dp"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Spinner
                android:id="@+id/ambulanceType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:background="@android:drawable/btn_dropdown"
                android:gravity="center"
                android:spinnerMode="dropdown" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/distance"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/distanceInKm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/_550"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginStart="5dp"
                        android:text="@string/km"
                        android:textSize="11sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/cost_total"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/costAmbulance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/_2500"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginStart="5dp"
                        android:text="@string/inr"
                        android:textSize="11sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/bookAmbulance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/book_ambulance" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>