<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:text="@string/are_you_in_emergency"
            android:textColor="@color/red"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/emergencyYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/circle_green"
                android:fontFamily="@font/aladin"
                android:gravity="center"
                android:padding="40sp"
                android:text="@string/yes"
                android:textSize="70sp" />

            <TextView
                android:id="@+id/emergencyNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/circle_red"
                android:fontFamily="@font/aladin"
                android:gravity="center"
                android:padding="40sp"
                android:text="@string/no"
                android:textSize="70sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>