<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.DrawerSection.merchants.documentDetails.DocumentDetailsForDoctorActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/addressProof"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/address_proof_upload"
            android:textAllCaps="false" />

        <com.google.android.material.card.MaterialCardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardElevation="10dp">

            <ImageView
                android:id="@+id/addressProofPreview"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="centerCrop"
                android:visibility="gone" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gstinNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/gstin_number_upload"
            android:textAllCaps="false" />

        <com.google.android.material.card.MaterialCardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardElevation="10dp">

            <ImageView
                android:id="@+id/gstinNumberPreview"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="centerCrop"
                android:visibility="gone" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/medical_certificate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/medical_certificate_upload"
            android:textAllCaps="false" />

        <com.google.android.material.card.MaterialCardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardElevation="10dp">

            <ImageView
                android:id="@+id/medical_certificatePreview"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="centerCrop"
                android:visibility="gone" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clinicLicense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/clinic_s_license_upload"
            android:textAllCaps="false" />

        <com.google.android.material.card.MaterialCardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardElevation="10dp">

            <ImageView
                android:id="@+id/clinicLicensePreview"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="centerCrop"
                android:visibility="gone" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/doctorsPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/doctor_s_photo_upload"
            android:textAllCaps="false" />

        <com.google.android.material.card.MaterialCardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardElevation="10dp">

            <ImageView
                android:id="@+id/doctorsPhotoPreview"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="centerCrop"
                android:visibility="gone" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/doctorsSignature"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/doctor_s_signature_upload"
            android:textAllCaps="false" />

        <com.google.android.material.card.MaterialCardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardElevation="10dp">

            <ImageView
                android:id="@+id/doctorsSignaturePreview"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="centerCrop"
                android:visibility="gone" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clinicPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/clinic_doctor_s_photo_upload"
            android:textAllCaps="false" />

        <com.google.android.material.card.MaterialCardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardElevation="10dp">

            <ImageView
                android:id="@+id/clinicPhotoPreview"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="centerCrop"
                android:visibility="gone" />
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/saveDocument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@color/red"
            android:backgroundTint="@color/red"
            android:padding="10dp"
            android:text="@string/submit_document" />


    </LinearLayout>


</ScrollView>